Improved printing: Margin & editor removed.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<xmp id="raw" theme="" style="display:none;"></xmp>
 	<textarea readonly onclick="this.select()" id="raw-copy"></textarea>
 </div>
-<div id="editor">
+<div id="editor" class="no-print">
 <select id="list">
 	<option value="">Select</option>
 </select>
